--- a/templates/admin/users/user.index.html.twig
+++ b/templates/admin/users/user.index.html.twig
@@ -1,11 +1,26 @@
-{% extends 'admin/layout.html.twig' %}
+{% extends 'admin/dashboard.html.twig' %}
 
 {% block content %}
-    {% for u in user %}
-        <ul>
-            <li>{{ u.id }}</li>
-            <li>{{ u.username }}</li>
-            <li>{{ u.roles.0 }}</li>
-        </ul>
-    {% endfor %}
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nom d'utilisateur</th>
+            <th scope="col">Email</th>
+            <th scope="col">Rôle</th>
+            <th scope="col">Statut</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for u in user %}
+            <tr>
+                <th scope="row">{{ u.id }}</th>
+                <td>{{ u.username }}</td>
+                <td>####</td>
+                <td>{{ u.roles.0 }}</td>
+                <td>####</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
