--- a/templates/users/user.html.twig
+++ b/templates/users/user.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Admin</h1>
-
-    {% block content %}{% endblock %}
+    {{ user.username }}
 {% endblock %}
