--- a/templates/admin/users/user.index.html.twig
+++ b/templates/admin/users/user.index.html.twig
@@ -9,16 +9,27 @@
             <th scope="col">Email</th>
             <th scope="col">Rôle</th>
             <th scope="col">Statut</th>
+            <th scope="col"><a href="{{ path("admin.user.new") }}" class="btn btn-primary"><i class="fas fa-user-plus"></i> Ajouter</a></th>
         </tr>
         </thead>
         <tbody>
         {% for u in user %}
             <tr>
                 <th scope="row">{{ u.id }}</th>
-                <td>{{ u.username }}</td>
-                <td>####</td>
+                <td><a href="{{ path("admin.user.show", { 'id' : u.id } ) }}">{{ u.username }}</a></td>
+                <td>{{ u.mail }}</td>
                 <td>{{ u.roles.0 }}</td>
-                <td>####</td>
+                <td>{{ (0 in u.status) ? 'Privé' : 'Public' }}</td>
+                <td>
+                    <a href="{{ path("admin.user.show", { 'id' : u.id }) }}" class="btn btn-success"><i class="far fa-eye"></i> Voir</a>
+                    <a href="{{ path("admin.user.edit", { 'id' : u.id } ) }}" class="btn btn-primary"><i class="far fa-edit"></i> Editer</a>
+                    <form method="post" action="{{ path('admin.user.delete', {'id': u.id}) }}" onsubmit="return confirm('Es-tu sûr(e) ?');">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ u.id) }}">
+                        <button class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
+                    </form>
+
+                </td>
             </tr>
         {% endfor %}
         </tbody>
