--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -8,6 +8,7 @@
         <ul>
             <li class="sidebar--item"><a href="{{ path("dashboard") }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li class="sidebar--item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-users"></i> Utilisateurs</a></li>
+            <li class="sidebar--item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-hat-wizard"></i> Animes</a></li>
         </ul>
     </div>
     <div class="content">
