--- a/templates/admin/users/user.show.html.twig
+++ b/templates/admin/users/user.show.html.twig
@@ -1,8 +1,12 @@
 {% extends 'admin/dashboard.html.twig' %}
 
 {% block content %}
+    <div class="action--back">
+        <a href="{{ path("admin.user.index") }}" class="btn btn-primary"><i class="fas fa-chevron-left"></i> Retour</a>
+    </div>
+    <hr />
     <div class="user--informations">
-        {{ user.username }}
+        <h1>{{ user.username }}</h1>
         {{ user.mail }}
         {{ user.status }}
     </div>
