--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="sidebar">
-        <div class="sidebar--logo">
+    <div class="sidebar_admin">
+        <div class="sidebar_admin__logo">
             <img src="{{ asset('/img/md/logo_md.png') }}">
         </div>
         <ul>
-            <li class="sidebar--item"><a href="{{ path("dashboard") }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-            <li class="sidebar--item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-users"></i> Utilisateurs</a></li>
-            <li class="sidebar--item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-hat-wizard"></i> Animes</a></li>
+            <li class="sidebar_admin__item"><a href="{{ path("dashboard") }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li class="sidebar_admin__item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-users"></i> Utilisateurs</a></li>
+            <li class="sidebar_admin__item"><a href="{{ path("admin.anime.index") }}"><i class="fas fa-hat-wizard"></i> Animes</a></li>
         </ul>
     </div>
     <div class="content">
