--- a/templates/users/user.html.twig
+++ b/templates/users/user.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'front.base.html.twig' %}
 
-{% block body %}
-    {{ user.username }}
+{% block content %}
+    {{ dump(user) }}
 {% endblock %}
