--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -14,15 +14,22 @@
                 </div>
                 <div class="col-sm-4">
                     {% if  app.user != null%}
-                        <a href="#" class="btn btn-outline-primary btn-darker-outline-blue">Connexion</a>
-                        <a href="#" class="btn btn-primary btn-darker-blue">Inscription</a>
-                    {% else %}
                         <div class="sidebar">
                             <div class="sidebar__img">
                                 <img src="{{ asset('/img/md/logo_md.png') }}">
                             </div>
                             <ul class="sidebar__menu">
-                                <li class="sidebar__item"><a href="#" class="sidebar__link">Link 1</a></li>
+                                {% if app.user.roles.0 == 'ROLE_ADMIN' %}
+                                    <li class="sidebar__item">
+                                        <a href="{{ path('dashboard') }}" class="sidebar__link">
+                                            <span class="sidebar__item__space"><i class="fas fa-cogs"></i></span> Administration
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                <li class="sidebar__item">
+                                    <a href="#" class="sidebar__link">
+                                        <span class="sidebar__item__space"><i class="fas fa-user"></i></span> Mon compte
+                                    </a></li>
                                 <li class="sidebar__item"><a href="#" class="sidebar__link">Link 2</a></li>
                                 <li class="sidebar__item"><a href="#" class="sidebar__link">Link 3</a></li>
                             </ul>
@@ -30,13 +37,18 @@
                         <button class="menu__toggle">
                             <i class="fas fa-bars"></i>
                         </button>
+                    {% else %}
+                        <a href="#" class="btn btn-outline-primary btn-darker-outline-blue">Connexion</a>
+                        <a href="#" class="btn btn-primary btn-darker-blue">Inscription</a>
                     {% endif %}
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
-    <div class="overlay"></div>
+    <main>
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
+        <div class="overlay"></div>
+    </main>
 {% endblock %}
