--- a/templates/admin/animes/anime.edit.html.twig
+++ b/templates/admin/animes/anime.edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="action--back">
-        <a href="{{ path("admin.animes.index") }}" class="btn btn-primary"><i class="fas fa-chevron-left"></i> Retour</a>
+        <a href="{{ path("admin.anime.index") }}" class="btn btn-primary"><i class="fas fa-chevron-left"></i> Retour</a>
     </div>
     <hr />
     {{ form_start(form) }}
