--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -11,6 +11,8 @@
             <li class="sidebar_admin__item"><a href="{{ path("dashboard") }}"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li class="sidebar_admin__item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-users"></i> Utilisateurs</a></li>
             <li class="sidebar_admin__item"><a href="{{ path("admin.anime.index") }}"><i class="fas fa-hat-wizard"></i> Animes</a></li>
+            <li class="sidebar_admin__item"><a href="{{ path("admin.target.index") }}"><i class="fas fa-bullseye"></i> Genre</a></li>
+
         </ul>
     </div>
     <div class="content">
