--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -12,6 +12,7 @@
             <li class="sidebar_admin__item"><a href="{{ path("admin.user.index") }}"><i class="fas fa-users"></i> Utilisateurs</a></li>
             <li class="sidebar_admin__item"><a href="{{ path("admin.anime.index") }}"><i class="fas fa-hat-wizard"></i> Animes</a></li>
             <li class="sidebar_admin__item"><a href="{{ path("admin.target.index") }}"><i class="fas fa-bullseye"></i> Genre</a></li>
+            <li class="sidebar_admin__item"><a href="{{ path("admin.tag.index") }}"><i class="fas fa-hashtag"></i> Tag</a></li>
 
         </ul>
     </div>
