--- a/templates/animes/anime.show.html.twig
+++ b/templates/animes/anime.show.html.twig
@@ -6,7 +6,7 @@
             <h1 class="anime__title__original">{{ anime.originalTitle }}</h1>
             <h2 class="anime__title__translated">({{ anime.translatedTitle }})</h2>
             <div class="anime__actions">
-                <a href="#" class="btn btn-primary">Voir l'opening</a>
+                <a href="#" class="btn btn-primary">Voir l'opening !</a>
                 <a href="#" class="btn btn-primary">Donner mon avis !</a>
             </div>
         </div>
