--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -39,7 +39,7 @@
                         </button>
                     {% else %}
                         <a href="#" class="btn btn-outline-primary btn-darker-outline-blue">Connexion</a>
-                        <a href="#" class="btn btn-primary btn-darker-blue">Inscription</a>
+                        <a href="{{ path('app_register') }}" class="btn btn-primary btn-darker-blue">Inscription</a>
                     {% endif %}
                 </div>
             </div>
