--- a/templates/animes/anime.index.html.twig
+++ b/templates/animes/anime.index.html.twig
@@ -14,7 +14,7 @@
                                     <img class="card-img-top" src="https://via.placeholder.com/300x150" alt="Replacer">
                                 {% endif %}
                             </div>
-                            <div class="card-body">
+                            <div class="card_body">
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <h3>{{ a.originalTitle }}</h3>
