--- a/templates/users/user.edit.html.twig
+++ b/templates/users/user.edit.html.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
     <div class="user">
-        <pre>
-            {{ dump(user) }}
-        </pre>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
     </div>
 {% endblock %}
