--- a/templates/animes/anime.index.html.twig
+++ b/templates/animes/anime.index.html.twig
@@ -9,24 +9,22 @@
                         <div class="card anime__card">
                             <div class="card_img__wrapper">
                                 {% if a.image %}
-                                    <img class="card-img-top" src="{{ asset('uploads/anime_image/' ~ a.image) }}" alt="{{ a.originalTitle }}">
+                                    <img class="card-img-top" src="{{ a.image }}" alt="{{ a.originalTitle }}">
                                 {% else %}
-                                    <img class="card-img-top" src="https://via.placeholder.com/300x150" alt="Replacer">
+                                    <img class="card-img-top" src="{{ a.image
+                                    }}" alt="Replacer">
                                 {% endif %}
                             </div>
                             <div class="card_body">
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <h3>{{ a.originalTitle }}</h3>
-                                        <h4>({{ a.translatedTitle }})</h4>
+                                        <h4><em>{{ a.translatedTitle }}</em></h4>
                                     </div>
                                     <div class="col-sm-6">
-                                        <span class="release_date__label">
-                                            Date de sortie :
+                                        <span class="anime__card anime__tag">
+                                            {{ a.target }}
                                         </span>
-                                        <div class="release_date__date">
-                                            {{ a.releaseDate.date|date("d/m/Y") }}
-                                        </div>
                                     </div>
                                 </div>
                             </div>
