--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -52,8 +52,11 @@
                         En cliquant sur "Inscription", vous reconnaissez avoir lu nos <a href="#">conditions d'utilisation</a> mises à jour,
                         la <a href="#">politique de confidentialité</a> et la <a href="#">politique de cookie</a>, et que votre utilisation continue du site Web est soumise à ces politiques.
                     </p>
+                </div>
+                <div class="form_register__options">
+                    <a href="#" class="btn btn-primary"><i class="fab fa-google"></i> M'inscrire avec Google</a>
                     <ul>
-                        <li><a href="#">J'ai déjà un compte</a></li>
+                        <li><a href="{{ path('app_login') }}">J'ai déjà un compte</a></li>
                         <li><a href="#">J'ai oublié mon mot de passe</a></li>
                     </ul>
                 </div>
