--- a/templates/users/user.html.twig
+++ b/templates/users/user.html.twig
@@ -2,8 +2,11 @@
 
 {% block content %}
     <div class="user">
-        <pre>
-            {{ dump(user) }}
-        </pre>
+        <h1>{{ user.username }}</h1>
+        <div class="user__informations">
+            <p>{{ user.mail }}</p>
+            <p>{{ user.status }}</p>
+            <img src="{{ user.avatar }}">
+        </div>
     </div>
 {% endblock %}
